[package]
name = "pstruct"
version = "0.1.0"
edition = "2024"
authors = ["Infamous <ehuff007@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust procedural macro for generating pointer struct implementations with field offset access."
repository = "https://github.com/ehuff700/pstruct"
categories = [
    "development-tools",
    "memory-management",
    "no-std",
    "no-std::no-alloc",
    "data-structures",
]
keywords = ["proc-macro", "pointer", "offset", "struct", "memory"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
attribute-derive = "0.10.3"

[lib]
proc-macro = true

[features]
debug = []
